<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="32dp"
    android:layout_marginVertical="16dp"
    tools:context=".login_activity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/login_icon"
        android:layout_marginVertical="32dp"
        android:id="@+id/sign_in_png"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in_png"
        android:id="@+id/hello_txt"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/form"
        android:layout_marginVertical="32dp"
        android:layout_below="@+id/hello_txt">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:background="@drawable/rounded_conner"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:id="@+id/email_input"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:background="@drawable/rounded_conner"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:inputType="textPassword"
            android:id="@+id/password_input"
            android:layout_marginTop="10dp"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:id="@+id/singIn_btn"
            android:layout_marginTop="12dp"
            android:text="@string/login"
            android:textColor="@color/white"/>
        <!-- Login progress -->
        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/form"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New User?"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create New Account"
            android:id="@+id/new_account"
            android:textColor="@color/black"
            />
    </LinearLayout>

</RelativeLayout>